# ai-act-lite

./: Dockerfile  README.md  render.yaml
backend/: pyproject.toml
backend/app/: api.py  main.py  pdf.py  risk_wizard.py
backend/app/prompts/: risk_wizard.md
backend/app/templates/: report.html
frontend/: .env.example  next.config.mjs  package.json  tailwind.config.js
frontend/public/: manifest.json  style.css
frontend/src/: global.d.ts
frontend/src/components/: RiskWizardForm.tsx
frontend/src/lib/: supabaseAdmin.ts
frontend/src/pages/: _app.tsx  dashboard.tsx  index.tsx  login.tsx  pricing.tsx  wizard.tsx
frontend/src/pages/api/: checkout_sessions.ts
frontend/src/pages/api/webhooks/: stripe.ts
frontend/src/pages/dashboard/: [id].tsx
infra/: Dockerfile  render.yaml
