[tool.poetry]
name = "ai_act_lite_backend"
version = "0.0.1"
description = "FastAPI backend for AI‑Act Lite"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
markdown = "^3.6"
weasyprint = "^62.1"
python-multipart = "^0.0.9"
openai = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"